fix(nav): align mobile hamburger styling with modal close button

--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ svg {
     left: 0;
     right: 0;
     width: auto;
-    padding: 1.5rem;
+    padding: 1.5rem 1rem 1.5rem 1.5rem;
     background: var(--color-surface-blur);
     backdrop-filter: var(--backdrop-blur);
     z-index: 10;
@@ -357,7 +357,7 @@ svg {
 .site-header__actions {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.75rem;
     z-index: 1;
 
     @media (min-width: 640px) {
@@ -478,9 +478,16 @@ svg {
     align-items: center;
     justify-content: center;
     border-radius: 100%;
+    background: var(--color-background-secondary);
+    transition: all .16s cubic-bezier(0, 0, 0.5, 1);
 
     &:hover {
         color: var(--color-accent);
+        background: var(--color-accent-hover);
+    }
+
+    &:active {
+        transform: scale(0.9);
     }
 
     &[aria-expanded="true"] .site-nav__hamburger-icon {
@@ -502,8 +509,9 @@ svg {
 
 .site-nav__hamburger-icon {
     display: block;
-    width: 1.25rem;
+    width: 1.125rem;
     height: 2px;
+    border-radius: 999px;
     background: currentColor;
     transition: transform 0.2s, opacity 0.2s;
 
@@ -512,18 +520,19 @@ svg {
         content: '';
         position: absolute;
         display: block;
-        width: 1.25rem;
+        width: 1.125rem;
         height: 2px;
+        border-radius: 999px;
         background: currentColor;
         transition: transform 0.2s, opacity 0.2s;
     }
 
     &::before {
-        transform: translateY(-0.375rem);
+        transform: translateY(-0.4rem);
     }
 
     &::after {
-        transform: translateY(0.375rem);
+        transform: translateY(0.4rem);
     }
 }
 
@@ -589,16 +598,14 @@ svg {
         border-radius: 999px;
         height: 3.5rem;
         font-size: 1.125rem;
+
+        &:hover {
+            background: var(--color-accent-hover);
+        }
     }
 
     @media (min-width: 1024px) {
         padding: 0 1.5rem;
-    }
-
-    @media (hover: hover) {
-        &:hover {
-            background: var(--color-accent-hover);
-        }
     }
 }
 
@@ -606,6 +613,11 @@ svg {
     position: absolute;
     bottom: 2rem;
     font-size: 1.125rem;
+    transition: all .16s ease;
+
+    &:hover {
+        color: var(--color-accent);
+    }
 
     @media (min-width: 640px) {
         display: none;
